# computer_service_system

./: .clang-format  CMakeLists.txt  create_db.sql  insert_db.sql  queries_db.sql
.github/workflows/: ci.yaml  docker-publish.yml
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_simple  test_simple[1]_include.cmake  test_simple[1]_tests.cmake
src/: logger.h  webserver.cpp  webserver.h
